f5_sphinx_theme/static/css/f5-theme.css
/*
 * Copyright 2018 F5 Networks
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * Base structure
 */

.wrapper {
  display: flex;
}


body {
  padding: 0 0 0 0;
  width: 100%;
}

#content {
  padding: 20px;
  min-height: 100vh;
  transition: all 0.3s;
}

#content.active {
  margin-left: 6px;
}

@media (min-width: 1025px) {
    #content {
      margin-left: 0;
    }
    #content.active {
      margin-left: 256px;
    }
}

@media (max-width: 1024px) {
    #content {
      margin-left: 256px;
    }
    #content.active {
      margin-left: 0;
    }
}

.search, #searchbox {
  margin: auto;
  display: inline;
  width: 80%;
  vertical-align: bottom;
  border-radius: 4px;
}

#sidebar p.caption-text {
  font-weight: bold;
  font-size: 14px;
}

/* Header paragraph links */
a.headerlink {
  color: #EBEBEB;
}

a.headerlink:hover {
  color: #0083c0;
}

/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

/*
 * Sidebar with ToC and search
 */

#sidebar, .section-nav {
  min-width: 256px;
  max-width: 256px;
  height: 85vh;
  max-height: 100vh;
  transition: all 0.3s;
  background-color: #e8e8e8;
  float: left;
  margin-right: 40px;
  margin-bottom: 256px;
  /*margin-top: 24px;*/
  overflow-x: scroll;
  overflow-y: scroll;
  padding: 16px 12px 16px 16px;
  font-size: 13px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
}

#sidebar.active {
    margin-left: -35%;
}

@media (max-width: 1024px) {
    #sidebar {
        margin-left: -75%;
    }
    #sidebar.active {
        margin-left: 0;
    }
}

@media (min-width: 1025px) {
  .site-hidden {
    display: none!important;
  }
}

@media (max-width: 1024px) {
  .site-hidden {
    display: block;
  }
}

form.search {
  padding-bottom: 6px;
  display: inline;
}

.search {
  /* margin: auto !important; */
  display: inline-table;
  width: auto !important;
}

#searchbox > form > button {
  margin: auto;
  padding: 0 4px;
  border-radius: 4px;
  display: inline-block;
}

#sidebar ul {
  margin: 3px 6px 6px -28px;
  list-style-type: none;
}

/* collapsible sidebar list items */
a[data-toggle="collapse"] {
    position: relative;
}

a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
    content: '\f146';
    display: block;
    position: absolute;
    right: 20px;
    font-family: 'FontAwesome';
    font-size: 0.6em;
}

a[aria-expanded="true"]::before {
    content: '\f0fe';
}


.site-nav-item {
    line-height: 16px;
    margin: 8px 0 0;
    position: relative;
}

.docs-wrapper {
  background: #212121;
  cursor: pointer;
  display: none;
  height: 100vh;
  opacity: .5;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10011;
}



.search .btn-primary {
  border-radius: 4px;
}

.navbar-btn {
  padding: 0 4px;
  border-radius: 4px;
  display: inline-block;
}

.search-wrapper {
  /* margin-right: 40px; */
  /* padding-right: 60px; */
  /* margin-left: initial; */
}

#search-results {
  /* margin-left: -20px; */
}

#search-results > h2,
#search-results > p {
  margin-left: 0;
}

#search-results > ul {
  display: block;
}
/*
 * Main content
 */

.main {
  padding: 20px;
}
/*
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}
*/


.site-article-inner {
    width: 95%;
    display: inline-grid;
}

.docs-container {
  margin-left: 25px;
  display: block;
}

.site-breadcrumb-nav {
  padding-top: 16px;
  display: inline;
}

ul.site-breadcrumb-list {
  margin: -2px;
  list-style-type: none;
}

.site-breadcrumb-list {
  padding: 0;
  word-wrap: break-word;
  word-break: break-all;
  font-size: 13px;
}


.site-breadcrumb-item {
    display: inline-block;
    margin: 0;
}

.sidebar {
  /*position: fixed;
  right: 0; */
  width: 35%;
  float: right;
  display: block;
  margin-left: 25px;
  background-color: #d4eaf6;
  padding: 10px;
  border-radius: 4px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
}


@media (max-width: 1024px) {
  .sidebar {
    width: 100%;
    display: inline-block;
    padding: 10px;
    margin-bottom: 20px;
  }
}

.sidebar>p,.sidebar>ul,.sidebar>li {
  font-size: 90%;
}

.sidebar>ul,.sidebar>li {
  margin: 11px;
  padding-left: 5px;
}

.sidebar-title {
  font-weight: bold;
  font-size: 100%;
}


/*
* Panels for Tip, See also, Note etc
*/

.admonition {
  border-radius: 4px;
  background-color: white;
  margin-bottom: 20px;
  margin-top: 10px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
}

div.sidebar ~ div.container.admonition {
  position: relative;
}

/* F5 Yellow: Caution */
.caution {
  border: 1px #FFF200 solid;
  background-color: #FFF;
}

.caution>.admonition-title {
  background-color: #FFF200;
  color: black;
  padding: 6px;
}

/* F5 Orange: Attention, Warning */
.attention, .warning {
  border: 1px #f66e41 solid;
  background-color: #FFF;
}

.attention>.admonition-title,
.warning>.admonition-title {
  background-color: #f66e41;
  color: white;
  padding: 6px;
}

/* F5 Red */
.danger, .error {
  border: 1px #e4002b solid;
  background-color: #FFF;
}

.danger>.admonition-title, .error>.admonition-title {
  background-color: #e4002b;
  color: white;
  padding: 6px;
}

/* Green */
.hint,
.admonition-tmsh {
  border: 1px #51af4a solid;
  background-color: #FFF;
}

.attention>.last {
  padding: 6px;
}
/* ... */

